Switch to using Vite

--- a/index.html
+++ b/index.html
@@ -6,16 +6,15 @@
     <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#349aed" />
-    <meta name="description"
-        content="The interactive web page for exploring how individual course goals support the goals of different curricular tracks and ultimately the primary goals of Wyoming Catholic College's entire curriculum." />
+    <meta name="description" content="The interactive web page for exploring how individual course goals support the goals of different curricular tracks and ultimately the primary goals of Wyoming Catholic College's entire curriculum." />
     <link rel="apple-touch-icon" href="/logo192.png" />
     <link rel="manifest" href="/manifest.json" />
     <title>WCC Goal Viewer</title>
 </head>
 
 <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+    <script type="module" src="/src/index.tsx"></script>
 </body>
 
 </html>
