--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <link rel="icon" href="/favicon.ico" />
+    <link rel="prefetch" href="/data.json">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#349aed" />
     <meta name="description" content="The interactive web page for exploring how individual course goals support the goals of different curricular tracks and ultimately the primary goals of Wyoming Catholic College's entire curriculum." />
